// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Native <Box /> as prop when br box created match snapshot 1`] = `
<Text
  style={Object {}}
>
  

</Text>
`;

exports[`Native <Box /> as prop when empty box created match snapshot 1`] = `
<View
  style={Object {}}
/>
`;

exports[`Native <Box /> as prop when span box created match snapshot 1`] = `
<Text
  style={Object {}}
/>
`;

exports[`Native <Box /> base prop when Pressable box created match snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  id="component"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={Object {}}
/>
`;

exports[`Native <Box /> default style when styled box created match snapshot 1`] = `
<View
  style={
    Object {
      "height": 300,
      "width": 300,
    }
  }
/>
`;
